--- a/Sample/WebApi/WebApi.csproj
+++ b/Sample/WebApi/WebApi.csproj
@@ -14,6 +14,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Hangfire.Dashboard.Management.v2" Version="2.2.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
 	</ItemGroup>
 
