--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -9,7 +9,7 @@
 		<Nullable>enable</Nullable>
 
 		<PackageId>TripleSix.Core</PackageId>
-		<Version>7.4.13</Version>
+		<Version>7.4.14</Version>
 		<Authors>triplesix0209@gmail.com</Authors>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
@@ -39,6 +39,7 @@
 		<PackageReference Include="FluentValidation" Version="11.9.0" />
 		<PackageReference Include="Hangfire.AspNetCore" Version="1.8.7" />
 		<PackageReference Include="Hangfire.Core" Version="1.8.7" />
+		<PackageReference Include="Hangfire.Dashboard.BasicAuthorization" Version="1.0.2" />
 		<PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="7.1.5" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.14" />
