--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -19,6 +19,8 @@ jobs:
 
         - name: Setup .NET
           uses: actions/setup-dotnet@v1
+          with:
+            dotnet-version: '9.0.x'
 
         - name: Pack NuGet package
           run: dotnet pack ${{ env.PACK_PROJECT }} --configuration Release --output dist
